<?xml version="1.0" encoding="utf-8"?>
<!-- Main View of Page  -->
<!-- Based on In Class Notes and Requirements, and Stack Overflow Pages, and Android Developer -->
<!-- (https://stackoverflow.com/questions/4645119/how-do-you-set-edittext-to-only-accept-numeric-values-in-android) -->
<!-- (https://developer.android.com/develop/ui/views/layout/linear#:~:text=Layout%20Weight,-LinearLayout%20also%20supports&text=This%20attribute%20assigns%20an%20%22importance,space%20in%20the%20parent%20view.) -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <!--    Profile Picture    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Profile Photo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="6"
                    android:layout_margin="5dp">
                </ImageView>

                <Button
                    android:id="@+id/btnChangePhoto"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/change"></Button>
            </LinearLayout>

        </LinearLayout>

        <!--    Name    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Name"/>

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/name_input" />

        </LinearLayout>

        <!--    Email    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Email" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email_input" />

        </LinearLayout>

        <!--    Phone Number    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Phone"/>

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint="@string/phone_number_input" />

        </LinearLayout>

        <!--    Gender    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Gender"/>

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <RadioButton
                    android:id="@+id/radioGenderF"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:text="Female"/>
                <RadioButton
                    android:id="@+id/radioGenderM"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:text="Male"/>

            </RadioGroup>

        </LinearLayout>

        <!--    Class    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Class"/>

            <EditText
                android:id="@+id/classInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:hint="@string/class_input" />

        </LinearLayout>

        <!--    Major    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="Major"/>

            <EditText
                android:id="@+id/majorInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/major_input" />

        </LinearLayout>

        <!--    Buttons    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/save"
                tools:ignore="Suspicious0dp">
            </Button>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/cancel"
                tools:ignore="Suspicious0dp">
            </Button>

        </LinearLayout>

    </LinearLayout>
</ScrollView>